fix: little mods to better fit on mobile

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
     font-size: 20px;
 }
 .container{
-    padding: 40px 0;
+    padding: 30px 0;
     width: 100%;
 }
 .people-button{
